# honkai_neus

./: .gitignore  .gitmodules  AABB_helper.py  CMakeLists.txt  LoFTR_helper.py  README.md  basic_activate.txt  blend.py  distill.py  exp_runner.py  frnn_helper.py  gen.py  hgl_4090_ssh.ssh  hgl_4090_ssh.ssh.pub  honkai_nerf.py  neus_reg.py  obb_reg.py  py_fricp_example.py  reg.py  reg_AABB.py  reg_FRNN.py  requirements.txt  setup_fricp.sh  similar_cam_pose_detect.py
confs/: extreme_thin_structure_white_bkgd.conf  small_structure_white_bkgd.conf  thin_structure_white_bkgd.conf  tree_structure_white_bkgd.conf  wmask.conf  wmask_js_bk_single_multi_qrs.conf  wmask_js_bk_single_multi_qrs_obj2.conf  wmask_js_bk_single_multi_qrs_obj4.conf  wmask_js_bk_single_multi_qrs_obj5.conf  wmask_js_bk_single_multi_qrs_obj6.conf  wmask_single_blender.conf  womask.conf  womask_500kiter.conf  womask_js_obj_single_multi_qrs.conf
confs/json/: fuxuan.json  fuxuan2.json  fuxuan_BEST.json  fuxuan_fricp.json  klee.json  march7th.json  nahida.json  neus_reg_config.json
dependencies/FRNN/: README.md
dependencies/FRNN/tests/: KNN_neighbor.py
dependencies/Fast-Robust-ICP/: main.cpp  transform_point_cloud.py
dynamic_test/: test_render.json  test_render.txt
examples/: KNN_example.py  py_fricp_example.py
models/: PY_FRICP.cpp  dataset.py  dataset_json.py  fields.py  py_fricp.cpp  py_fricp.pyi  renderer.py
tools/: generate_json_template.py  setup_fricp.sh
